@@ -292,7 +292,7 @@ public class AuthResource extends RestServletBase {
         final String username = body.has( "username" ) ? body.get( "username" ).getAsString() : null;
         final String password = body.has( "password" ) ? body.get( "password" ).getAsString() : null;
 
-        if ( username == null || username.trim().isEmpty() || password == null ) {
+        if ( username == null || username.isBlank() || password == null ) {
             sendError( response, HttpServletResponse.SC_BAD_REQUEST, "Username and password are required" );
             return;
         }
